--- a/style.css
+++ b/style.css
@@ -1,3 +1,56 @@
 body {
     background-color: rgb(176, 161, 241);
 }
+
+#fantasyForm {
+    text-align: center;
+    background-color: rgb(176, 125, 204);
+    margin: 80px;
+    padding: 50px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+*, ::after, ::before {
+    box-sizing: content-box;
+ } 
+
+.btn {
+    margin-top: 10px;
+    padding: 10px 10px;
+    font-size: 1rem;
+    border: none;
+    border-radius: 3px;
+    background: #a174b3;
+    color: white;
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background: #ffffff;
+    transform: scale(1.1);
+}
+
+h1, .result {
+    font-family: "ivystyle-sans", sans-serif;
+    font-weight: 700;
+    font-style: italic;
+    margin-top: 20px;
+}
+
+p {
+    font-family: "gimlet-display", serif;
+    font-size: 30px;
+    font-weight: 400;
+    font-style: italic;
+    text-align: center;
+}
+
+label {
+    font-family: "gimlet-display", serif;
+    font-size: 30px;
+    font-weight: 400;
+    font-style: italic;
+    text-align: center;
+}
