--- a/style.css
+++ b/style.css
@@ -18,18 +18,16 @@ body {
 .btn {
     margin-top: 10px;
     padding: 10px 10px;
-    font-size: 1rem;
+    font-size: 25px;
     border: none;
     border-radius: 3px;
     background: #a174b3;
     color: white;
-    transition: all 0.3s ease;
-    cursor: pointer;
+  
 }
 
 .btn:hover {
-    background: #ffffff;
-    transform: scale(1.1);
+    background: #cd93e4;
 }
 
 h1, .result {
